--- a/README
+++ b/README
@@ -43,7 +43,7 @@ Background
 I created this script to assist users in turning mpd in an audiophile
 digital music player. See the article [How to turn Music Player Daemon
 (mpd) into an audiophile music
-player](http://www.lacocina.nl/artikelen/mpd-configure-audiophile).
+player](http://lacocina.nl/audiophile-mpd).
 
 
 Simple usage
