--- a/README
+++ b/README
@@ -6,18 +6,47 @@ The `mpd-configure` bash script creates a valid
 bit perfect playback of any digital audio file, including those of
 high resolution.
 
-With default settings the script uses the first available audio
-interface, and has automagic procedures for things like the music
-directory and directory where files are stored, the number of items in
-the music direcory and the UPNP name. When multiple audio interfaces
-are found, the user is presented with a choice.
+With default settings the script uses the first available alsa audio
+interface by using its hardware address (in the form of `hw:x,y`), and
+has automagic procedures for things like the music directory and
+directory where files are stored, the number of items in the music
+direcory and the UPNP name. When multiple audio interfaces are found,
+the user is presented with a choice.
 
+Basic usage
+-----------
+
+Run the script will default settings and print the resulting mpd
+configuration file to stdout:
+
+````bash
+bash mpd-configure
 ````
-## run the script will default settings and store the resulting
-## mpd configuration file in mympd.conf:
+
+### Storing the output of the script in a file
+
+The output can simply be redirected to a file (in this example
+`mympd.conf`) using bash:
+````bash
 bash mpd-configure > mympd.conf
 ````
 
+or, in case the script was downloaded correctly with the execute bit set:
+
+````bash
+./mpd-configure > mympd.conf
+````
+
+Although the same may be achieved by setting `CONF_MPD_CONFFILE` on
+the command line, with the *gained benefit* of having the script
+detect if the file `mympd.conf` already exists, in which case the user
+is prompted to overwrite it, while making an automated *backup* of the
+original file:
+````bash
+CONF_MPD_CONFFILE=mympd.conf bash mpd-configure
+````
+
+### More advanced usage example
 
 Apart from standard settings all configuration parameters for mpd are
 available in configuration snippet files in the `./confs-available/`
@@ -28,7 +57,7 @@ snippets, will be expanded to their calculated values by the
 script. Any setting may be specified in the file
 `./mpd-configure.conf` or on the command line like so:
 
-````
+````bash
 ## run the script with two options set on the command line which
 ## sets the `music_directory` paramater to `/srv/media/music` and
 ## saves the result in `/etc/mpd.conf`:
@@ -40,24 +69,30 @@ CONF_MPD_CONFFILE=/etc/mpd.conf \
 By default `mpd-configure` prompts the user when the specified file
 already exists, and makes a backup of any existing file.
 
-A fully automated example which does not prompt the user, uses the
-first available (by setting `DISABLE_PROMPTS`) USB Audio Class
-interface (by setting `OPT_LIMIT_UO`) and sets some paths:
+### Fully automated usage example
 
-````
-DISABLE_PROMPTS=True OPT_LIMIT_UO=True CONF_MPD_CONFFILE=/etc/mpd.conf \
+A fully automated example which does not prompt the user (by setting
+`DISABLE_PROMPTS`), uses the first available USB Audio Class interface
+(by setting `LIMIT_INTERFACE_TYPE=usb`) and sets some paths, while
+creating a backup of the original `/etc/mpd.conf` in case it exists:
+
+````bash
+DISABLE_PROMPTS=True LIMIT_INTERFACE_TYPE=usb CONF_MPD_CONFFILE=/etc/mpd.conf \
 CONF_MPD_MUSICDIR="/srv/media/music" CONF_MPD_HOMEDIR="/var/lib/mpd" \
 bash mpd-configure
 ````
+
+. See [Detailed usage instructions](#detailed-usage-instructions) for
+more information on the usage and available settings.
+
+
+About the alsa-capabilities helper script
+-----------------------------------------
 
 `mpd-configure` relies on the accompanying bash script `alsa-capabilities` for
 getting information about the available audio output interfaces from
 alsa. Also offered is the `mpd-monitor' script which shows which parts
 of the audio chain are configured for bit perfect audio playback.
-
-
-About the alsa-capabilities helper script
------------------------------------------
 
 `alsa-capabilities` may be run from the commandline. It will then
 display each alsa audio output interface with its capabilities, like
@@ -120,8 +155,8 @@ digital music player. See the article [How to turn Music Player Daemon
 player](http://lacocina.nl/audiophile-mpd).
 
 
-Simple usage
-------------
+Detailed usage instructions
+---------------------------
 
 For systems with a fixed configuration --eg a PC with a locally
 installed mpd connected to some USB DAC or with a internal soundcard--
@@ -136,7 +171,7 @@ will prompt you to specify which one to use. As bitperfect mode
 assumes that `mpd` has exclusive access to this output interface, the
 script will notify the user if its in use.
 
-After creating such a configuration file, `mpd` can betold to use this
+After creating such a configuration file, `mpd` can be told to use this
 configuration file with:
 
     mpd ~/mpd.conf
@@ -185,8 +220,12 @@ home directory of the auto logon user specified in
 run the script and start `mpd` using the script generated
 `~/.mpd/mpd.conf`, ie:
 
-    LIMIT_INTERFACE_TYPE="usb" bash ~/mpd-configure/mpd-configure > ~/.mpd/mpd.conf && \
-    mpd ~/.mpd/mpd.conf
+````bash
+    systemctl stop mpd && \
+    LIMIT_INTERFACE_TYPE="usb" CONF_MPD_CONFFILE=~/.mpd/mpd.conf \
+    bash ~/mpd-configure/mpd-configure && \
+    systemctl start mpd
+````    
 
 ### Usage from within python
 
