updated sample bash script

--- a/README
+++ b/README
@@ -284,9 +284,10 @@ run the script and start `mpd` using the script generated
 
 ### Usage from within another bash or sh script
 
-
-bash examples/bash-example.sh hw:1,0
-The bash script [./examples/bash-example.sh](https://github.com/ronalde/mpd-configure/tree/master/examples/bash-example.sh) demonstrates the way alsa-capabilities can be used from another bash script.
+The bash script
+[./examples/bash-example.sh](https://github.com/ronalde/mpd-configure/tree/master/examples/bash-example.sh)
+demonstrates the way alsa-capabilities can be used from another bash
+script.
 
 This demo script returns the monitoring file of the file specified as an argument:
 
